--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-<div class="site-title">Text-input vault</div>
+<div class="site-title">Textinput Vault</div>
 <div class="gallery-container" id="gallery"></div>
 
 <script>
