--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gallery with zoomwall.js</title>
 <link rel="stylesheet" type="text/css" href="zoomwall.css" />
+<style>
+  /* Adding some style for the title */
+  h1 {
+    text-align: center; /* Centers the title */
+    margin-top: 20px; /* Adds some space above the title */
+    font-size: 2.5em; /* Makes the font larger */
+  }
+
+  /* Optional: Adding some spacing around the gallery for better layout */
+  #gallery {
+    margin: 20px auto;
+    width: 90%; /* Adjusts the width of the gallery */
+  }
+</style>
 </head>
 <body>
+
+<h1>Textinput Vault</h1> <!-- Title added here -->
 
 <div id="gallery" class="zoomwall">
   <!-- Images will be dynamically added here -->
