--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gallery with zoomwall.js</title>
+<title>Textinput Vault Gallery</title>
 <link rel="stylesheet" type="text/css" href="zoomwall.css" />
 <style>
   /* Adding some style for the title */
