--- a/index.html
+++ b/index.html
@@ -3,26 +3,33 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Textinput Vault Gallery</title>
+<title>Gallery with zoomwall.js</title>
 <link rel="stylesheet" type="text/css" href="zoomwall.css" />
 <style>
-  /* Adding some style for the title */
   h1 {
-    text-align: center; /* Centers the title */
-    margin-top: 20px; /* Adds some space above the title */
-    font-size: 2.5em; /* Makes the font larger */
+    text-align: center;
+    margin-top: 20px;
+    font-size: 2.5em;
   }
 
-  /* Optional: Adding some spacing around the gallery for better layout */
   #gallery {
+    display: flex; /* Use flexbox to align items */
+    flex-wrap: wrap; /* Allow items to wrap as needed */
+    justify-content: center; /* Center items horizontally */
+    gap: 10px; /* Optional: adds a gap between images */
     margin: 20px auto;
-    width: 90%; /* Adjusts the width of the gallery */
+    width: 90%; /* Adjust based on your preference */
+  }
+
+  #gallery img {
+    flex: 1 0 auto; /* Allows images to be flexible but not stretch */
+    max-width: 100%; /* Ensure images are not larger than their container */
   }
 </style>
 </head>
 <body>
 
-<h1>Textinput Vault</h1> <!-- Title added here -->
+<h1>Textinput Vault</h1>
 
 <div id="gallery" class="zoomwall">
   <!-- Images will be dynamically added here -->
@@ -30,7 +37,6 @@
 
 <script src="zoomwall.js"></script>
 <script>
-// Function to dynamically load images from 'imageList.json' and add to the gallery
 function loadImages() {
   fetch('imageList.json')
     .then(response => response.json())
@@ -39,7 +45,7 @@ function loadImages() {
       imageList.forEach(imageName => {
         const img = document.createElement('img');
         img.src = `media/${imageName}`;
-        img.setAttribute('data-highres', `media/${imageName}`); // If you still need this attribute
+        img.setAttribute('data-highres', `media/${imageName}`);
         gallery.appendChild(img);
       });
 
